2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix the recognition of Solaris.
	* lispbibl.d (UNIX_SUNOS5): Include also Solaris/x86_64.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix recognition of native Windows as target platform.
	* makemake.in (TOS): Set based on $host_os from autoconf.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Don't generate a broken Makefile when using the option --host/--build.
	Rationale:
	- clisp cannot be cross-built anyway (because of the memory image).
	  The earlier use-case of "makemake cross ..." of ca. 1993 was when
	  compiling for a slow machine. Nowadays machines are much faster.
	- The main use of --host is to indicate which toolchain to use
	  (${host}-gcc, ${host}-ld, ${host}-ar, etc.)
	- --host is frequently used in builds on Windows (e.g.
	  --build=i686-pc-cygwin --host=i686-w64-mingw32).
	* configure: Don't pass 'cross' to makemake.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix error message when configure fails due to a missing argument.
	* configure: Set prev to 'build', not 'host'. In the error message,
	add '--' before prev.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure when compiling 'newer' on Cygwin.
	* makemake.in (CPPFLAGS): Add the ${GNULIB_INCLUDE} options here too.
	Link all programs that are compiled with $(CPPFLAGS) with ${GLLIB_A}.
	(MODULE_CPPFLAGS): No need to add ${GNULIB_INCLUDE} a second time.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix alignment issues on IA64 and with GENERIC64C_HEAPCODES.
	* lispbibl.d (C_CODE_ALIGNMENT, log2_C_CODE_ALIGNMENT): Don't redefine.
	(PSEUDODATA_ALIGNMENT, log2_PSEUDODATA_ALIGNMENT): New macros.
	(PSEUDOCODE_ALIGNMENT, log2_PSEUDOCODE_ALIGNMENT): New macros.
	(make_machine_code): Adjust for GENERIC64C_HEAPCODES.
	(TheMachineCode): Adjust accordingly.
	* spvw.d (verify_pseudodata_alignment): New macro.
	(error_pseudodata_alignment): New function.
	(verify_pseudocode_alignment): Renamed from verify_code_alignment.