@@ -1,6 +1,6 @@
 /* generated by Makefile.devel from version.sh */
 #define PACKAGE_NAME "GNU CLISP"
 #define PACKAGE_TARNAME "clisp"
-#define PACKAGE_VERSION "2.49 (2010-07-07)"
-#define PACKAGE_STRING "GNU CLISP 2.49 (2010-07-07)"
+#define PACKAGE_VERSION "2.49.50 (2017-03-19)"
+#define PACKAGE_STRING "GNU CLISP 2.49.50 (2017-03-19)"
 #define PACKAGE_BUGREPORT "http://clisp.org/"
