@@ -1,5 +1,11 @@
 2017-03-19  Bruno Haible  <bruno@clisp.org>
 
+	Prepare beta release.
+	* version.sh: Bump version number to 2.49.50.
+	* version.h, aclocal.m4, src/configure: Regenerated.
+
+2017-03-19  Bruno Haible  <bruno@clisp.org>
+
 	Fix the recognition of Solaris.
 	* lispbibl.d (UNIX_SUNOS5): Include also Solaris/x86_64.
 
